Add footer, update readme

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
         </div>
         <button id="new-grid-btn">New grid</button>
+        <footer>
+            Copyright © Rachael Cole 2022. This project is&nbsp;<a href="https://github.com/jcrachael/tod-etch-a-sketch/">open source</a>.
+        </footer>
         <script src="scripts.js"></script>
     </body>
 </html>
